# Agents-1

./: .gitignore  AGENT_FUNCTIONAL_PLAN.md  AI_Agent_PDR.md  README.md  setup.py  test.py
agent/: .env.example  Dockerfile  FLOW_PY_FILES.md  README.md  README_CREDENTIALS.md  TESTING_GUIDE.md  TEST_RUN_RESULTS.md  pyproject.toml  requirements.txt
agent/scripts/: run.sh  validate_and_test.sh
agent/scripts/sample_payloads/: webhook_task_github.json  webhook_task_machhakiran_agents1.json
agent/src/: __init__.py  main.py
agent/src/api/: deps.py
agent/src/api/routes/: __init__.py  health.py  webhooks.py
agent/src/config/: __init__.py  settings.py
agent/src/core/: __init__.py  pipeline.py
agent/src/models/: __init__.py  events.py  plan.py  task.py
agent/src/services/: __init__.py  codebase_map.py  implementer.py  llm.py  planner.py  prompts.py  validator.py  webhook_parser.py
agent/src/services/git/: __init__.py  clone.py  github_provider.py  gitlab_provider.py  provider.py
agent/src/utils/: __init__.py  idempotency.py  logging.py
agent/tests/: __init__.py
